// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`belongstomany  loads: raw 1`] = `
BelongsToMany {
  "$obj": Object {
    "belongsToMany": EntityReference {
      "$obj": Object {
        "backField": "id",
        "entity": "Name",
        "field": "id",
        Symbol(metadata): Object {},
      },
    },
    "entity": "user",
    "field": "name",
    "fields": Map {},
    "using": EntityReference {
      "$obj": Object {
        "backField": "id",
        "entity": "C",
        "field": "id",
        Symbol(metadata): Object {},
      },
    },
    Symbol(metadata): Object {
      "name": Object {
        "full": "userBelongsToManyNames",
        "normal": "userNames",
        "short": "Names",
      },
      "persistence": Object {
        "embedded": false,
        "single": false,
        "stored": false,
      },
      "verb": "BelongsToMany",
    },
  },
}
`;

exports[`belongstomany  loads: toObject 1`] = `
Object {
  "belongsToMany": "id@Name#id",
  "embedded": false,
  "entity": "user",
  "field": "name",
  "fields": Array [],
  "metadata": Object {
    "name": Object {
      "full": "userBelongsToManyNames",
      "normal": "userNames",
      "short": "Names",
    },
    "persistence": Object {
      "embedded": false,
      "single": false,
      "stored": false,
    },
    "verb": "BelongsToMany",
  },
  "name": undefined,
  "opposite": undefined,
}
`;
